public/assets/css/custom.css
body {
	height: 100vh;
}

h1 {
	/*color: #fefefe;*/
}
.navbar {
	margin-bottom: 0;
}
#page-content {
	width: 100%;
	height: 100%;
	padding: 0;
}
#splash{
	position: relative;
	top: 15vh;
}
#splash-buttons {
	margin-top: 20px;
	margin-bottom: 20px;
}
.page-fill {
	padding-top: 40px;
	height: 100%;
	width: 100%;
}
/*remove accessibility outline on focus*/
.btn {
	outline: none !important;
}
/*set focus and active attributes for the select multiple buttons*/
.btn-multiple:focus {
	background-color: #00996d;
	border-color: #00805b;
	box-shadow: none;
}
.btn-multiple.active {
	background-color: #006649;
	border-color: #00422f;
	box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
}
/*hide type="number" spin buttons*/
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
.answer-choice {
	width: 35px;
	margin-bottom: 5px;
}
.navbar-brand {
	font-size: 200%;
}
.problem-img {
	min-width: 150px;
	min-height: 150px;
	display: block;
	margin: 14px auto;
}

